# leancd

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench.sh  cache-bloat.sh  gen-manifests.sh  health-heavy.sh  scale.sh
charts/leancd/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/leancd/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  grafana-dashboard-configmap.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  priorityclass.yaml  rbac.yaml  serviceaccount.yaml
dashboards/: leancd-overview.json
deploy/: leancd-namespaced.yaml  leancd.yaml
doc/: architecture.md  design.md  migration-from-argocd.md  release.md  tutorial.md  user-manual.md
exploratory/: .gitignore  Dockerfile.build  Dockerfile.host-binary  README.md  deploy-argocd.sh  deploy-leancd.sh  install-argocd.sh  report.md  run.sh  setup.sh  teardown.sh
exploratory/charts/cert-manager/: render.sh  values.yaml
exploratory/charts/vm-stack/: render.sh
exploratory/lib/: chart.sh  common.sh  compare.sh  git.sh  safety.sh
exploratory/manifests/: argocd-app.yaml  leancd.yaml
exploratory/vm-stack/: render.sh  values.yaml
scripts/: release.sh
src/: cli.rs  config.rs  drift.rs  error.rs  git_sync.rs  health.rs  hooks.rs  kube_util.rs  lock.rs  main.rs  manifest.rs  metrics.rs  prune.rs  reconcile.rs  resource_health.rs  state.rs  version.rs  watch.rs
tests/: e2e.rs  forgejo.yaml  leancd.yaml
tests/common/: env.rs  fgdelete.rs  fixture.rs  forgejo.rs  git.rs  helm.rs  kubectl.rs  leancd.rs  manifests.rs  metrics.rs  mod.rs  portforward.rs  ssh.rs  wait.rs
